Cleanup load configuration format, add logging tests, and fix a major bug that caused long-running processes to fail due to not enough IO buffer.